--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nor-api-registration",
-  "version": "0.1.43",
+  "version": "0.1.44",
   "description": "Registration API module",
   "main": "src/registration.js",
   "scripts": {
@@ -23,13 +23,14 @@
   "dependencies": {
     "q"               : ">= 1.0.1  < 1.1.0",
     "crypt3"          : ">= 0.1.6  < 0.2.0",
-    "nor-data"        : ">= 0.0.17  < 0.1.0",
-    "nor-debug"       : ">= 0.1.48 < 0.2.0",
+    "nor-data"        : ">= 0.0.18  < 0.1.0",
+    "nor-debug"       : ">= 0.1.49 < 0.2.0",
+    "nor-array"       : ">= 0.1.7 < 0.2.0",
     "nor-is"          : ">= 0.1.16 < 0.2.0",
-    "nor-nopg"        : ">= 0.1.101 < 0.2.0",
-    "nor-express"     : ">= 0.1.53 < 0.2.0",
-    "nor-ref"         : ">= 0.1.3  < 0.2.0",
-    "nor-api-helpers" : ">= 0.1.10  < 0.2.0"
+    "nor-nopg"        : ">= 0.1.102 < 0.2.0",
+    "nor-express"     : ">= 0.1.54 < 0.2.0",
+    "nor-ref"         : ">= 0.1.4  < 0.2.0",
+    "nor-api-helpers" : ">= 0.1.11  < 0.2.0"
   },
   "devDependencies":{
     "jshint"       : "*"
